Cambios en el archivo application.properties de Spring Boot.

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Nombre de la aplicación.
 spring.application.name=CRM_Soporte_Tecnico
+
+# Ruta base para todos los endpoints.
+server.servlet.context-path=/sistema/api/v1
+
+# Se va a correr por el puerto 8080.
+server.port=8080
+
+# Configuraciones para conectar con la base de datos.
