Se ha vuelto a contruir todo el frontend de cero y no se han añadido más cambios. En la parte del backend se han añadido configuraciones en el archivo application.properties.

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -1,10 +1,27 @@
 # Nombre de la aplicación.
 spring.application.name=CRM_Soporte_Tecnico
 
-# Ruta base para todos los endpoints.
+# Prefijo para todas las rutas.
 server.servlet.context-path=/sistema/api/v1
 
 # Se va a correr por el puerto 8080.
 server.port=8080
 
 # Configuraciones para conectar con la base de datos.
+# La URL usa el nombre del servicio Docker: 'db-postgres'.
+spring.datasource.url=jdbc:postgresql://db-postgres:5432/crm_soporte_db
+spring.datasource.username=crm_user
+spring.datasource.password=crm_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de JPA/Hibernate
+# Usamos 'none' porque las tablas ya se crean mediante el script SQL de Docker.
+spring.jpa.hibernate.ddl-auto=none
+# Muestra las consultas SQL en la consola para la depuración.
+spring.jpa.show-sql=true
+# Formatea las consultas SQL para que sean legibles.
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración básica de seguridad (Se sobreescribirá con Spring Security).
+spring.security.user.name=user
+spring.security.user.password=password
