Servicio para el login incluido, aún esta leyendo mal las llaves .pem, lo corrigiré luego.

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 
 # Configuraciones para conectar con la base de datos.
 # La URL usa el nombre del servicio Docker: 'db-postgres'.
-spring.datasource.url=jdbc:postgresql://db-postgres:5432/crm_soporte_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/crm_soporte_db
 spring.datasource.username=crm_user
 spring.datasource.password=crm_password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -25,3 +25,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuración básica de seguridad (Se sobreescribirá con Spring Security).
 spring.security.user.name=user
 spring.security.user.password=password
+
+# Configuración JWT
+# Rutas a las llaves JWT para firma y verificación.
+jwt.keys.public-key-location=classpath:jwtKeys/public_key.pem
+jwt.keys.private-key-location=classpath:jwtKeys/private_key.pem
