Inicio de los envíos de correo.

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -30,3 +30,13 @@ spring.security.user.password=password
 # Rutas a las llaves JWT para firma y verificación.
 jwt.keys.public-key-location=classpath:jwtKeys/public_key.pem
 jwt.keys.private-key-location=classpath:jwtKeys/private_key.pem
+
+# Configuración de Spring Mail para las notificaciones.
+# Servidor SMTP de ejemplo (usando Gmail como placeholder).
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=crmserviciotecnico52@gmail.com
+spring.mail.password=CRMSoporteTecnico
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
