Modificando el dashboard cliente

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 
 # Configuraciones para conectar con la base de datos.
 # La URL usa el nombre del servicio Docker: 'db-postgres'.
-spring.datasource.url=jdbc:postgresql://localhost:5432/crm_soporte_db
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/crm_soporte_db
 spring.datasource.username=crm_user
 spring.datasource.password=crm_password
 spring.datasource.driver-class-name=org.postgresql.Driver
