Dashboard del Manager terminado. Solo falta hacerlo bonito con los estilos.

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 # Formatea las consultas SQL para que sean legibles.
 spring.jpa.properties.hibernate.format_sql=true
+# Esto hace que hibernate confíe en la validación que ya se hizo en el controller.
+spring.jpa.properties.javax.persistence.validation.mode=none
 
 # Configuración básica de seguridad (Se sobreescribirá con Spring Security).
 spring.security.user.name=user
