Finalización al 100% el Dashboard del Manager, implementación al 100% de la automatización de generación de PDFs de facturación y el Dashboard del Admin completado al 100%.

--- a/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Nombre de la aplicación.
+# Nombre de la aplicaciï¿½n.
 spring.application.name=CRM_Soporte_Tecnico
 
 # Prefijo para todas las rutas.
@@ -17,23 +17,23 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Configuración de JPA/Hibernate
 # Usamos 'none' porque las tablas ya se crean mediante el script SQL de Docker.
 spring.jpa.hibernate.ddl-auto=none
-# Muestra las consultas SQL en la consola para la depuración.
+# Muestra las consultas SQL en la consola para la depuraciï¿½n.
 spring.jpa.show-sql=true
 # Formatea las consultas SQL para que sean legibles.
 spring.jpa.properties.hibernate.format_sql=true
-# Esto hace que hibernate confíe en la validación que ya se hizo en el controller.
+# Esto hace que hibernate confï¿½e en la validaciï¿½n que ya se hizo en el controller.
 spring.jpa.properties.javax.persistence.validation.mode=none
 
-# Configuración básica de seguridad (Se sobreescribirá con Spring Security).
+# Configuraciï¿½n bï¿½sica de seguridad (Se sobreescribirï¿½ con Spring Security).
 spring.security.user.name=user
 spring.security.user.password=password
 
-# Configuración JWT
-# Rutas a las llaves JWT para firma y verificación.
+# Configuraciï¿½n JWT
+# Rutas a las llaves JWT para firma y verificaciï¿½n.
 jwt.keys.public-key-location=classpath:jwtKeys/public_key.pem
 jwt.keys.private-key-location=classpath:jwtKeys/private_key.pem
 
-# Configuración de Spring Mail para las notificaciones.
+# Configuraciï¿½n de Spring Mail para las notificaciones.
 # Servidor SMTP de ejemplo (usando Gmail como placeholder).
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
