--- a/backend/crmSoporteTecnico/crmSoporteTecnico/pom.xml
+++ b/backend/crmSoporteTecnico/crmSoporteTecnico/pom.xml
@@ -33,7 +33,8 @@
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
-            <version>5.5.13.3</version> </dependency>
+            <version>5.5.13.3</version>
+        </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
